k8s-manifests/nginx-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: nginx-service
spec:
  selector:
    app: nginx
  ports:
  - protocol: TCP
    port: 80      # External port
    targetPort: 80 # Internal container port
  type: NodePort  # Expose on a random high port (30000-32767)
